load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "imgui",
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "//imgui/bazel:fonts",
        "@gl3w",
        "@imgui",
        "@implot",
        "@stb",
    ],
)
