load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//shared/bazel/rules/gen:gen-resources.bzl", "generate_resources")
load("//shared/bazel/rules/gen:gen-version-file.bzl", "generate_version_file")
load("//shared/bazel/rules:cc_rules.bzl", "wpilib_cc_binary_tool")

generate_resources(
    name = "generate-resources",
    namespace = "ov",
    prefix = "OV",
    resource_files = glob(["src/main/native/resources/*"]),
)

generate_version_file(
    name = "generate-version",
    output_file = "WPILibVersion.cpp",
    template = "src/main/generate/WPILibVersion.cpp.in",
)

wpilib_cc_binary_tool(
    name = "outlineviewer",
    srcs = glob(["src/main/native/cpp/*"]) + [
        ":generate-resources",
        ":generate-version",
    ],
    linkopts = select({
        "@bazel_tools//src/conditions:windows": ["-SUBSYSTEM:WINDOWS"],
        "//conditions:default": [],
    }),
    tags = [
        "wpi-cpp-gui",
    ],
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": ["@platforms//:incompatible"],
        "@rules_bzlmodrio_toolchains//constraints/is_systemcore:systemcore": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = [
        "//glass:libglass",
        "//glass:libglassnt",
    ],
    maven_group_id = "edu.wpi.first.tools",
    maven_artifact_name = "OutlineViewer",
)
