# java_import(
#     name = "wpiprotoplugin",
#     jars = ["wpiprotoplugin.jar"],
# )
#
# java_binary(
#     name = "binary",
#     runtime_deps = [":wpiprotoplugin"],
#     main_class = "org.wpilib.ProtoCDllGenerator",
#     visibility = ["//visibility:public"],
# )

load("@rules_python//python:defs.bzl", "py_binary")

alias(
    name = "protoplugin",
    actual = "//protoplugin/src/main/java/org/wpilib:protoplugin",
    visibility = ["//visibility:public"],
)

py_binary(
    name = "bazel_proto_generator",
    srcs = ["bazel_proto_generator.py"],
    data = [
        ":protoplugin",
        "@com_google_protobuf//:protoc",
    ],
    visibility = ["//visibility:public"],
    deps = ["@rules_python//python/runfiles"],
)
