load("//shared/bazel/rules:cc_flags.bzl", "get_libssh_linker_flags", "get_wpigui_linker_flags")
load("//shared/bazel/rules:cc_rules.bzl", "wpilib_cc_binary")
load("//shared/bazel/rules/gen:gen-resources.bzl", "generate_resources")
load("//shared/bazel/rules/gen:gen-version-file.bzl", "generate_version_file")

generate_resources(
    name = "generate-resources",
    namespace = "rtns",
    prefix = "RTNS",
    resource_files = glob(["src/main/native/resources/*"]),
)

generate_version_file(
    name = "generate-version",
    output_file = "WPILibVersion.cpp",
    template = "src/main/generate/WPILibVersion.cpp.in",
)

wpilib_cc_binary(
    name = "roborioteamnumbersetter",
    srcs = glob(["src/main/native/cpp/*"]) + [
        ":generate-resources",
        ":generate-version",
    ],
    defines = ["LIBSSH_STATIC"],
    linkopts = get_wpigui_linker_flags(console = False) + get_libssh_linker_flags(),
    tags = [
        "no-roborio",
        "wpi-cpp-gui",
    ],
    deps = [
        "//glass:libglass",
        "//wpinet:wpinet.shared",
        "@bzlmodrio-libssh//libraries/cpp/libssh",
    ],
)
