

load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")
load("@allwpilib_pip_deps//:requirements.bzl", "requirement")
load(":examples.bzl", "define_examples")

py_console_script_binary(
    name = "robotpy",
    pkg = "@allwpilib_pip_deps//robotpy_cli",
    # shebang = "#!/usr/bin/env python3",

    deps = [
        requirement("pytest"),
        requirement("pytest-reraise"),
        "//wpilibc:robotpy-wpilib-import",
        "//pyfrc:pyfrc-wheel-import",
    ]
)

py_binary(
    name = "wrapper",
    srcs = ["wrapper.py"],
    deps = [":robotpy"],
)

define_examples()