load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_test")
load("@rules_java//java:defs.bzl", "java_binary", "java_library")
load("@rules_pkg//pkg:zip.bzl", "pkg_zip")
load("//shared/bazel/rules:cc_rules.bzl", "wpilib_cc_library", "wpilib_cc_shared_library", "wpilib_cc_static_library")
load("//shared/bazel/rules:packaging.bzl", "pkg_java_files")
load("//shared/bazel/rules/publishing:publishing.bzl", "bundle_library_artifacts")

pkg_java_files(name = "romi-java-srcs")

pkg_zip(
    name = "libromi-java-sources",
    srcs = [":romi-java-srcs"],
    out = "libromi-java-sources.jar",
    tags = [
        "manual",
        "no-remote",
    ],
)

wpilib_cc_library(
    name = "romiVendordep_base",
    srcs = glob([
        "src/main/native/cpp/**",
    ]),
    hdrs = glob(["src/main/native/include/**"]),
    strip_include_prefix = "src/main/native/include",
    visibility = ["//visibility:public"],
    deps = [
        "//ntcore:ntcore_base",
        "//wpilibc:wpilibc_base",
        "//wpinet:wpinet_base",
    ],
)

wpilib_cc_shared_library(
    name = "romiVendordep",
    dynamic_deps = [
        "//hal:shared/wpiHal",
        "//ntcore:shared/ntcore",
        "//wpilibc:shared/wpilibc",
        "//wpinet:shared/wpinet",
        "//wpiutil:shared/wpiutil",
    ],
    deps = [
        ":romiVendordep_base",
    ],
)

alias(
    name = "shared/romiVendordep",
    actual = ":romiVendordep",
    visibility = ["//visibility:public"],
)

wpilib_cc_static_library(
    name = "static/romiVendordep",
    static_deps = [
        "//ntcore:static/ntcore",
        "//wpilibc:static/wpilibc",
        "//wpinet:static/wpinet",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":romiVendordep_base",
    ],
)

java_library(
    name = "romiVendordep-java",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//hal:hal-java",
        "//wpilibj:wpilibj-java",
    ],
)

cc_test(
    name = "romi-test",
    size = "small",
    srcs = glob(["src/test/native/cpp/**"]),
    dynamic_deps = [
        ":shared/romiVendordep",
        "//datalog:shared/datalog",
        "//hal:shared/wpiHal",
        "//ntcore:shared/ntcore",
        "//wpilibc:shared/wpilibc",
        "//wpimath:shared/wpimath",
        "//wpinet:shared/wpinet",
        "//wpiutil:shared/wpiutil",
    ],
    deps = [
        ":romiVendordep_base",
        "//thirdparty/googletest",
    ],
)

cc_binary(
    name = "DevMain-Cpp",
    srcs = ["src/dev/native/cpp/main.cpp"],
    dynamic_deps = [
        ":shared/romiVendordep",
        "//datalog:shared/datalog",
        "//hal:shared/wpiHal",
        "//ntcore:shared/ntcore",
        "//wpilibc:shared/wpilibc",
        "//wpimath:shared/wpimath",
        "//wpinet:shared/wpinet",
        "//wpiutil:shared/wpiutil",
    ],
    deps = [
        ":romiVendordep_base",
    ],
)

java_binary(
    name = "DevMain-Java",
    srcs = ["src/dev/java/edu/wpi/first/wpilibj/romi/DevMain.java"],
    main_class = "edu.wpi.first.wpilibj.romi.DevMain",
    deps = [
        "//hal:hal-java",
        "//ntcore:ntcore-java",
        "//wpiutil:wpiutil-java",
    ],
)

bundle_library_artifacts(
    name = "publishing_bundle",
    cc_hdr_pkg = ":romiVendordep_base-hdrs-zip",
    cc_shared_library_pkg = ":romiVendordep-shared-zip",
    cc_src_pkg = ":romiVendordep_base-srcs-zip",
    cc_static_library_pkg = ":static/romiVendordep-static-zip",
    group_id = "edu.wpi.first.romiVendordep",
    java_pkg = "libromi-java-sources",
    library_base_name = "romiVendordep",
)
